k8s/nlb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nlb-service
  annotations:
    # The follow annotations is used for NLB creation automatically. 
    # But need to install AWS load balancer controller first. 
    service.beta.kubernetes.io/aws-load-balancer-name: eks-demo-nlb
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
spec:
  type: LoadBalancer
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 8080
