k8s/simple-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 8080
